# xgpui

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: button.html  data_table.html  date_time_picker.html  highlight.js  index.html  select.html  styles.css  text_input.html  textarea.html  tree.html
examples/: button.rs  data_table.rs  date_time_picker.rs  select.rs  text_input.rs  textarea.rs  tree.rs
src/: lib.rs  prelude.rs
src/components/: mod.rs
src/components/button/: mod.rs  props.rs  style.rs  tests.rs
src/components/data_table/: mod.rs  props.rs  state.rs  style.rs  tests.rs
src/components/date_time_picker/: mod.rs  props.rs  state.rs  style.rs  tests.rs
src/components/select/: mod.rs  props.rs  state.rs  style.rs  tests.rs
src/components/text_input/: display.rs  mod.rs  props.rs  state.rs  style.rs  tests.rs
src/components/textarea/: mod.rs  props.rs  state.rs  style.rs  tests.rs
src/components/tree/: mod.rs  props.rs  state.rs  style.rs  tests.rs
src/foundation/: color.rs  icon.rs  mod.rs  radius.rs  size.rs  spacing.rs  theme.rs
