[package]
name = "xgpui"
version = "0.1.0"
edition = "2021"
description = "基于 gpui 的 Rust 基础 UI 组件库"
license = "Apache-2.0"

[dependencies]
gpui = "0.2.2"
lucide-icons = "1.14"
unicode-segmentation = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
# 仅在测试目标中启用 gpui 的测试上下文，用于覆盖 Entity 组件公开同步方法。
gpui = { version = "0.2.2", features = ["test-support"] }
